<resources>
    <string name="app_name">PlappAndroid</string>
    <string name="title_home">Greenhouse</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_discover">Discover</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_add_plant">Add Plant</string>
    <string name="plant">Plant</string>
    <string name="managePlant">Manage</string>
    <string name="loading">Loading</string>
    <string name="list_item_title">List item Title</string>
    <string name="list_item_description">List Item description</string>
    <string name="plant_type">Plant Type</string>
    <string name="logoplapp">LogoPlapp</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="username">Username </string>
    <string name="create_account" />
    <string name="signin">SignIn</string>
    <string name="register">Register</string>

    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="sigin">Sigin</string>

</resources>
