<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="2dp"
    app:cardPreventCornerOverlap="false"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/plantImage"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/plantImage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/container1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/plantName"
                android:text="@string/list_item_title"
                android:textColor="#000"
                android:textSize="19sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/plantDescription"
                android:text="@string/list_item_description"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/managePlant"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/cardview_light_background"/>


        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>